--- a/portfolio.html
+++ b/portfolio.html
@@ -9,83 +9,135 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <a class="logo" href="index.html">WebStudio</a>
-        <nav>
-            <ul>
-                <li><a class="nav-a" href="#">Agencja</a></li>
-                <li><a class="nav-a" href="portfolio.html">Portfolio</a></li>
-                <li><a class="nav-a" href="#">Kontakty</a></li>
+    <div class="wrapper">
+        <header class="header">
+            <a class="logo" href="index.html"><span class="brand-color-blue">Web</span>Studio</a>
+            <nav>
+              <ul class="nav-list">
+                <li class="nav-item"><a class="nav-link" href="#">Agencja</a></li>
+                <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Kontakt</a></li>
+              </ul>
+            </nav>
+            <ul class="contact-list">
+              <li class="contact-item">
+                <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              </li>
+              <li class="contact-item">
+                <a class="contact-link" href="tel:+48111111111">+48 111 111 111</a>
+              </li>
             </ul>
-        </nav>
-        <ul>
-            <li><a class="contact-a" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="contact-a" href="tel:+48111111111">+48 111 111 111</a></li>
-        </ul>        
-    </header>
-    <main>
-        <div>
-            <ul>
-              <li><button type="button" class="btn">Wszystkie</button></li>
-              <li><button type="button" class="btn">Strony</button></li>
-              <li><button type="button" class="btn">Aplikacje</button></li>
-              <li><button type="button" class="btn">Dizajn</button></li>
-              <li><button type="button" class="btn">Marketing</button></li>
-            </ul>
-        </div>
-        <section>
-            <ul>
-                <li>
-                    <img src="images/img-portf-01.jpg" width="370" height="294" alt="portfolio1" >
-                    <h3>Technocrack</h3>
-                    <p>Strona internetowa</p>
-                </li>
-                <li><img src="images/img-portf-02.jpg" width="370" height="294" alt="portfolio2" >
-                    <h3>Grafika New Orlean vs Golden Star</h3>
-                    <p>Dizajn</p>
-                </li>
-                <li><img src="images/img-portf-03.jpg" width="370" height="294" alt="portfolio3" >
-                    <h3>Restauracja Seafood</h3>
-                    <p>Aplikacja</p>
-                </li>
-                <li><img src="images/img-portf-04.jpg" width="370" height="294" alt="portfolio4" >
-                    <h3>Projekt Prime</h3>
-                    <p>Marketing</p>
-                </li>
-                <li><img src="images/img-portf-05.jpg" width="370" height="294" alt="portfolio5" >
-                    <h3>Projekt Boxes</h3>
-                    <p>Aplikacja</p>
-                </li>
-                <li><img src="images/img-portf-06.jpg" width="370" height="294" alt="portfolio6" >
-                    <h3>Inspiration has no Borders</h3>
-                    <p>Strona internetowa</p>
-                </li>
-                <li><img src="images/img-portf-07.jpg" width="370" height="294" alt="portfolio7" >
-                    <h3>Magazyn Limited Edition</h3>
-                    <p>Dizajn</p>
-                </li>
-                <li><img src="images/img-portf-08.jpg" width="370" height="294" alt="portfolio8" >
-                    <h3>Projekt LAB</h3>
-                    <p>Marketing</p>
-                </li>
-                <li><img src="images/img-portf-09.jpg" width="370" height="294" alt="portfolio9" >
-                    <h3>Growing Business</h3>
-                    <p>Aplikacja</p>
-                </li>
-            </ul>
-        </section>
-    </main>
-
-
-    <footer>
-        <a class="logo" href="index.html">WebStudio</a>
-        <address>
-            <ul>
-                <li>m. Warszawa, Aleje Jerozolimskie 21</li>
-                <li><a class="footer-link" href="mailto:info@example.com">info@example.com</a></li>
-                <li><a class="footer-link" href="tel:+48111111111">+48 111 111 111</a></li>
-            </ul>            
-        </address>
-    </footer>
+        </header>
+        <main class="main">            
+            <div class="portf-menu-list">
+                <ul>
+                  <li class="portf-menu-item"><button type="button" class="btn">Wszystkie</button></li>
+                  <li class="portf-menu-item"><button type="button" class="btn">Strony</button></li>
+                  <li class="portf-menu-item"><button type="button" class="btn">Aplikacje</button></li>
+                  <li class="portf-menu-item"><button type="button" class="btn">Dizajn</button></li>
+                  <li class="portf-menu-item"><button type="button" class="btn">Marketing</button></li>
+                </ul>
+            </div>
+            <section>
+                <ul class="list">
+                    <li>
+                        <figure>
+                            <img src="images/img-portf-01.jpg" width="370" height="294" alt="portfolio1" >
+                            <figcaption>
+                                <h3 class="project-h3-title">Technocrack</h3>
+                                <p class="projects-text">Strona internetowa</p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="images/img-portf-02.jpg" width="370" height="294" alt="portfolio2" >
+                            <figcaption>
+                                <h3 class="project-h3-title">Grafika New Orlean vs Golden Star</h3>
+                                <p class="projects-text">Dizajn</p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="images/img-portf-03.jpg" width="370" height="294" alt="portfolio3" >
+                            <figcaption>
+                                <h3 class="project-h3-title">Restauracja Seafood</h3>
+                                <p class="projects-text">Aplikacja</p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="images/img-portf-04.jpg" width="370" height="294" alt="portfolio4" >
+                            <figcaption>
+                                <h3 class="project-h3-title">Projekt Prime</h3>
+                                <p class="projects-text">Marketing</p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="images/img-portf-05.jpg" width="370" height="294" alt="portfolio5" >
+                            <figcaption>
+                                <h3 class="project-h3-title">Projekt Boxes</h3>
+                                <p class="projects-text">Aplikacja</p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="images/img-portf-06.jpg" width="370" height="294" alt="portfolio6" >
+                            <figcaption>
+                                <h3 class="project-h3-title">Inspiration has no Borders</h3>
+                                <p class="projects-text">Strona internetowa</p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="images/img-portf-07.jpg" width="370" height="294" alt="portfolio7" >
+                            <figcaption>
+                                <h3 class="project-h3-title">Magazyn Limited Edition</h3>
+                                <p class="projects-text">Dizajn</p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="images/img-portf-08.jpg" width="370" height="294" alt="portfolio8" >
+                            <figcaption>
+                                <h3 class="project-h3-title">Projekt LAB</h3>
+                                <p class="projects-text">Marketing</p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="images/img-portf-09.jpg" width="370" height="294" alt="portfolio9" >
+                            <figcaption>
+                                <h3 class="project-h3-title">Growing Business</h3>
+                                <p class="projects-text">Aplikacja</p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                </ul>
+            </section>
+        </main>
+        <footer class="footer">
+            <a class="logo" href="index.html"><span class="brand-color-blue">Web</span>Studio</a>
+                <address>
+                    <ul class="address-list list">
+                        <li class="address-item">m. Warszawa, Aleje Jerozolimskie 21</li>
+                        <li class="address-item">
+                            <a class="address-link" href="mailto:info@example.com"><span>info@example.com</span></a>
+                        </li>
+                        <li class="address-item">
+                            <a class="address-link" href="tel:+48111111111">+48 111 111 111</a>
+                        </li>
+                    </ul>
+                </address>
+        </footer>
+    </div>
 </body>
 </html>
