--- a/portfolio.html
+++ b/portfolio.html
@@ -16,13 +16,13 @@
 <body>
     <header class="header-line">
         <div class="header container">
-            <a class="logo" href="index.html"><span class="brand-color-blue">Web</span>Studio</a>
-            <nav>
-              <ul class="nav-list">
-                <li class="nav-item"><a class="nav-link" href="#">Agencja</a></li>
-                <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Kontakt</a></li>
-              </ul>
+            <nav class="nav">
+                <a class="logo" href="index.html"><span class="brand-color-blue">Web</span>Studio</a>
+                <ul class="nav-list list">
+                    <li class="nav-item"><a class="nav-link" href="#">Agencja</a></li>
+                    <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Kontakt</a></li>
+                </ul>
             </nav>
             <ul class="contact-list">
               <li class="contact-item">
@@ -34,104 +34,105 @@
             </ul>
         </div>
     </header>
-        <main>            
-            <div class="portf-menu-list">
-                <ul>
-                  <li class="portf-menu-item"><button type="button" class="btn">Wszystkie</button></li>
-                  <li class="portf-menu-item"><button type="button" class="btn">Strony</button></li>
-                  <li class="portf-menu-item"><button type="button" class="btn">Aplikacje</button></li>
-                  <li class="portf-menu-item"><button type="button" class="btn">Dizajn</button></li>
-                  <li class="portf-menu-item"><button type="button" class="btn">Marketing</button></li>
-                </ul>
-            </div>
-            <section>
-                <ul class="list">
-                    <li>
-                        <figure>
-                            <img src="images/img-portf-01.jpg" width="370" height="294" alt="portfolio1" >
-                            <figcaption>
-                                <h3 class="project-h3-title">Technocrack</h3>
-                                <p class="projects-text">Strona internetowa</p>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img src="images/img-portf-02.jpg" width="370" height="294" alt="portfolio2" >
-                            <figcaption>
-                                <h3 class="project-h3-title">Grafika New Orlean vs Golden Star</h3>
-                                <p class="projects-text">Dizajn</p>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img src="images/img-portf-03.jpg" width="370" height="294" alt="portfolio3" >
-                            <figcaption>
-                                <h3 class="project-h3-title">Restauracja Seafood</h3>
-                                <p class="projects-text">Aplikacja</p>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img src="images/img-portf-04.jpg" width="370" height="294" alt="portfolio4" >
-                            <figcaption>
-                                <h3 class="project-h3-title">Projekt Prime</h3>
-                                <p class="projects-text">Marketing</p>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img src="images/img-portf-05.jpg" width="370" height="294" alt="portfolio5" >
-                            <figcaption>
-                                <h3 class="project-h3-title">Projekt Boxes</h3>
-                                <p class="projects-text">Aplikacja</p>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img src="images/img-portf-06.jpg" width="370" height="294" alt="portfolio6" >
-                            <figcaption>
-                                <h3 class="project-h3-title">Inspiration has no Borders</h3>
-                                <p class="projects-text">Strona internetowa</p>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img src="images/img-portf-07.jpg" width="370" height="294" alt="portfolio7" >
-                            <figcaption>
-                                <h3 class="project-h3-title">Magazyn Limited Edition</h3>
-                                <p class="projects-text">Dizajn</p>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img src="images/img-portf-08.jpg" width="370" height="294" alt="portfolio8" >
-                            <figcaption>
-                                <h3 class="project-h3-title">Projekt LAB</h3>
-                                <p class="projects-text">Marketing</p>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img src="images/img-portf-09.jpg" width="370" height="294" alt="portfolio9" >
-                            <figcaption>
-                                <h3 class="project-h3-title">Growing Business</h3>
-                                <p class="projects-text">Aplikacja</p>
-                            </figcaption>
-                        </figure>
-                    </li>
-                </ul>
-            </section>
-        </main>
+    <main class="container">
+        <section class="portf-menu-list section">
+            <ul>
+                <li class="portf-menu-item"><button type="button" class="btn">Wszystkie</button></li>
+                <li class="portf-menu-item" ><button type="button" class="btn">Strony</button></li>
+                <li class="portf-menu-item"><button type="button" class="btn">Aplikacje</button></li>
+                <li class="portf-menu-item"><button type="button" class="btn">Dizajn</button></li>
+                <li class="portf-menu-item"><button type="button" class="btn">Marketing</button></li>
+            </ul>
+        </section>
+        <section>
+            <ul class="project-list list">
+                <li>
+                    <figure>
+                        <img src="images/img-portf-01.jpg" width="370" height="294" alt="portfolio1" >
+                        <figcaption class="project-figcaption">
+                            <h3 class="project-h3-title">Technocrack</h3>
+                            <p class="project-text">Strona internetowa</p>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="images/img-portf-02.jpg" width="370" height="294" alt="portfolio2" >
+                        <figcaption class="project-figcaption">
+                            <h3 class="project-h3-title">Grafika New Orlean vs Golden Star</h3>
+                            <p class="project-text">Dizajn</p>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="images/img-portf-03.jpg" width="370" height="294" alt="portfolio3" >
+                        <figcaption class="project-figcaption">
+                            <h3 class="project-h3-title">Restauracja Seafood</h3>
+                            <p class="project-text">Aplikacja</p>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="images/img-portf-04.jpg" width="370" height="294" alt="portfolio4" >
+                        <figcaption class="project-figcaption">
+                            <h3 class="project-h3-title">Projekt Prime</h3>
+                            <p class="project-text">Marketing</p>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="images/img-portf-05.jpg" width="370" height="294" alt="portfolio5" >
+                        <figcaption class="project-figcaption">
+                            <h3 class="project-h3-title">Projekt Boxes</h3>
+                            <p class="project-text">Aplikacja</p>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="images/img-portf-06.jpg" width="370" height="294" alt="portfolio6" >
+                        <figcaption class="project-figcaption">
+                            <h3 class="project-h3-title">Inspiration has no Borders</h3>
+                            <p class="project-text">Strona internetowa</p>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="images/img-portf-07.jpg" width="370" height="294" alt="portfolio7" >
+                        <figcaption class="project-figcaption">
+                            <h3 class="project-h3-title">Magazyn Limited Edition</h3>
+                            <p class="project-text">Dizajn</p>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="images/img-portf-08.jpg" width="370" height="294" alt="portfolio8" >
+                        <figcaption class="project-figcaption">
+                            <h3 class="project-h3-title">Projekt LAB</h3>
+                            <p class="project-text">Marketing</p>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="images/img-portf-09.jpg" width="370" height="294" alt="portfolio9" >
+                        <figcaption class="project-figcaption">
+                            <h3 class="project-h3-title">Growing Business</h3>
+                            <p class="project-text">Aplikacja</p>
+                        </figcaption>
+                    </figure>
+                </li>
+            </ul>
+        </section>
+    </main>
         <footer class="footer">
-            <a class="logo" href="index.html"><span class="brand-color-blue">Web</span>Studio</a>
+            <div class="container">
+                <a class="logo" href="index.html"><span class="brand-color-blue">Web</span>Studio</a>
                 <address>
                     <ul class="address-list list">
                         <li class="address-item">m. Warszawa, Aleje Jerozolimskie 21</li>
@@ -143,7 +144,7 @@
                         </li>
                     </ul>
                 </address>
-        </footer>
-    </div>
+            </div>
+        </footer>    
 </body>
 </html>
