--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </ul>        
       </div>
     </header>
-    <main>   
+    <main>
         <section class="section-h1 section">
           <div class="section-h1-div">
             <h1 class="section-h1-title">Efektywne rozwiązania dla waszego biznesu</h1>
@@ -61,7 +61,7 @@
                 </li>
             </ul>
         </section>              
-        <section class="about-us section container">
+        <section class="about-us container">
             <h2 class="section-h2-title">Czym się zajmujemy</h2>
             <ul class="list">
                 <li class="about-us-item">
@@ -132,7 +132,6 @@
                 </ul>
               </address>
             </div>
-        </footer>
-    
+        </footer>    
 </body>
 </html>
