--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
             <ul class="list">
                 <li class="descript-item">
                     <h4 class="descript-title">Lorem ipsum</h4>
-                    <p class="descript-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam iusto unde nostrum illo officiis soluta!</p>
+                    <p class="descript-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
                 </li>
                 <li class="descript-item">
                     <h4 class="descript-title">Lorem ipsum</h4>
-                    <p class="descript-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam iusto unde nostrum illo officiis soluta!</p>
+                    <p class="descript-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
                 </li>
                 <li class="descript-item">
                     <h4 class="descript-title">Lorem ipsum</h4>
-                    <p class="descript-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam iusto unde nostrum illo officiis soluta!</p>
+                    <p class="descript-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
                 </li>
                 <li class="descript-item">
                     <h4 class="descript-title">Lorem ipsum</h4>
-                    <p class="descript-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam iusto unde nostrum illo officiis soluta!</p>
+                    <p class="descript-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
                 </li>
             </ul>
         </section>              
@@ -74,47 +74,49 @@
                     <img src="images/img3.jpg" width="370" height="294" alt="about-us-3">
                 </li>
             </ul>
-        </section>        
+        </section>
         <section class="team section">
-          <h2 class="section-h2-title">Nasz zespół</h2>
-            <ul class="list">
-                <li class="team-item">
-                  <figure class="team-photo">
-                      <img src="images/img4.jpg" width="270" height="260" alt="John Doe" >
+          <div class="container">
+            <h2 class="section-h2-title">Nasz zespół</h2>
+              <ul class="list">
+                  <li class="team-item">
+                    <figure class="team-photo">
+                        <img src="images/img4.jpg" width="270" height="260" alt="John Doe" >
+                            <figcaption class="team-figcaption">
+                            <h3 class="section-h3-title">John Doe</h3>
+                            <p class="team-text">Product Designer</p>
+                            </figcaption>
+                    </figure>
+                  </li>
+                  <li class="team-item">
+                      <figure class="team-photo">
+                      <img src="images/img5.jpg" width="270" height="260" alt="John Doe" >
                           <figcaption class="team-figcaption">
-                          <h3 class="section-h3-title">John Doe</h3>
-                          <p class="team-text">Product Designer</p>
+                              <h3 class="section-h3-title">John Doe</h3>
+                              <p class="team-text">Frontend Developer</p>
                           </figcaption>
-                  </figure>
-                </li>
-                <li class="team-item">
-                    <figure class="team-photo">
-                    <img src="images/img5.jpg" width="270" height="260" alt="John Doe" >
-                        <figcaption class="team-figcaption">
-                            <h3 class="section-h3-title">John Doe</h3>
-                            <p class="team-text">Frontend Developer</p>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li class="team-item">
-                    <figure class="team-photo">
-                    <img src="images/img6.jpg" width="270" height="260" alt="John Doe" >
-                        <figcaption class="team-figcaption">
-                            <h3 class="section-h3-title">John Doe</h3>
-                            <p class="team-text">Marketing</p>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li class="team-item">
-                    <figure class="team-photo">
-                    <img src="images/img7.jpg" width="270" height="260" alt="John Doe" >
-                        <figcaption class="team-figcaption">
-                            <h3 class="section-h3-title">John Doe</h3>
-                            <p class="team-text">UI Designer</p>
-                        </figcaption>
-                    </figure>
-                </li>
-            </ul>
+                      </figure>
+                  </li>
+                  <li class="team-item">
+                      <figure class="team-photo">
+                      <img src="images/img6.jpg" width="270" height="260" alt="John Doe" >
+                          <figcaption class="team-figcaption">
+                              <h3 class="section-h3-title">John Doe</h3>
+                              <p class="team-text">Marketing</p>
+                          </figcaption>
+                      </figure>
+                  </li>
+                  <li class="team-item">
+                      <figure class="team-photo">
+                      <img src="images/img7.jpg" width="270" height="260" alt="John Doe" >
+                          <figcaption class="team-figcaption">
+                              <h3 class="section-h3-title">John Doe</h3>
+                              <p class="team-text">UI Designer</p>
+                          </figcaption>
+                      </figure>
+                  </li>
+              </ul>
+          </div>
         </section>
     </main>  
         <footer class="footer">
