--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </div>
         </section>
         <section class="descript section container">
-            <ul class="list">
+            <ul class="list flex">
                 <li class="descript-item">
                     <h4 class="descript-title">Lorem ipsum</h4>
                     <p class="descript-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
@@ -63,7 +63,7 @@
         </section>              
         <section class="about-us container">
             <h2 class="section-h2-title">Czym się zajmujemy</h2>
-            <ul class="list">
+            <ul class="list flex">
                 <li class="about-us-item">
                     <img src="images/img1.jpg" width="370" height="294" alt="about-us-1">
                 </li>
@@ -78,7 +78,7 @@
         <section class="team section">
           <div class="container">
             <h2 class="section-h2-title">Nasz zespół</h2>
-              <ul class="list">
+              <ul class="list flex">
                   <li class="team-item">
                     <figure class="team-photo">
                         <img src="images/img4.jpg" width="270" height="260" alt="John Doe" >
