--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,6 @@
     <link href="./css/styles.css" rel="stylesheet" />
 
 </head>
-
 <body>
     <header class="page-header">
         <div class="container-header container">
@@ -137,7 +136,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="project-point">
+                    <!-- <li class="project-point">
                         <a href="./images/fresh-coffee-image-09.jpg" class="project-photo link">
                             <img src="./images/fresh-coffee-image-09.jpg" alt="someone pours milk into coffee"
                                 width="360" height="300">
@@ -146,7 +145,7 @@
                                 <p class="project-text">Web Site</p>
                             </div>
                         </a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
 
