--- a/index.html
+++ b/index.html
@@ -2,42 +2,37 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
-        integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
-        rel="stylesheet" />
-    <link href="./css/styles.css" rel="stylesheet" />
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Studio</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
+  <link href="./css/styles.css" rel="stylesheet" />
 </head>
 <body>
-    <header class="page-header">
-        <div class="container-header container">
-            <nav class="navigation-list">
-                <a href="./index.html" class="navigation-logo link">Web<span class="logo-span">Studio</span></a>
-                <ul class="navigation-page list">
-                    <li><a href="./index.html" class="navigation-link link">Studio</a></li>
-                    <li><a href="./portfolio.html" class="navigation-link link">Portfolio</a></li>
-                    <li><a href="" class="navigation-link link">Contacts</a></li>
-                </ul>
-            </nav>
+  <header class="page-header">
+    <div class="container-header container">
+      <nav class="navigation-list">
+        <a href="./index.html" class="navigation-logo link">Web<span class="logo-span">Studio</span></a>
+        <ul class="navigation-page list">
+          <li><a href="./index.html" class="navigation-link link">Studio</a></li>
+          <li><a href="./portfolio.html" class="navigation-link link">Portfolio</a></li>
+          <li><a href="" class="navigation-link link">Contacts</a></li>
+        </ul>
+      </nav>
 
-            <address class="address">
-                <ul class="address-list list">
-                    <li><a href="mailto:info@devstudio.com" class="address-link link">info@devstudio.com</a></li>
-                    <li><a href="tel:+110001111111" class="address-link link">+11 (000) 111-11-11</a></li>
-                </ul>
-            </address>
-        </div>
-    </header>
+      <address class="address">
+          <ul class="address-list list">
+              <li><a href="mailto:info@devstudio.com" class="address-link link">info@devstudio.com</a></li>
+              <li><a href="tel:+110001111111" class="address-link link">+11 (000) 111-11-11</a></li>
+          </ul>
+      </address>
+    </div>
+  </header>
 
     <main>
         <!--Section no. 1 filters-->
