--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!--Section no.2 Our objectives-->
     <section class="section-objectives">
       <div class="container">
-        <h2 class="sub-headline visually-hidden">Our objectives</h2>
+        <h2 class="visually-hidden">Our objectives</h2>
         <ul class="list">
           <li class="list-point-objectives">
             <h3 class="sub-headline-objectives">Strategy</h3>
