--- a/index.html
+++ b/index.html
@@ -11,21 +11,24 @@
     <link href="./css/styles.css" rel="stylesheet" >
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html" class="navigation-logo link">Web<span class="logo-span">Studio</span></a>
-        <ul class="list">
-          <li><a href="./index.html" class="navigation-link link">Studio</a></li>
-          <li><a href="" class="navigation-link link">Portfolio</a></li>
-          <li><a href="" class="navigation-link link">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul class="list">
-          <li><a href="mailto:info@devstudio.com" class="address-link link">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111" class="address-link link">+11 (000) 111-11-11</a></li>
-        </ul>
-      </address>
+    <header class="page-header">
+      <div class="container-header container">
+        <nav class="navigation-list"
+          <a href="./index.html" class="navigation-logo link">Web<span class="logo-span">Studio</span></a>
+          <ul class="list">
+            <li><a href="./index.html" class="navigation-link link">Studio</a></li>
+            <li><a href="" class="navigation-link link">Portfolio</a></li>
+            <li><a href="" class="navigation-link link">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="list">
+            <li><a href="mailto:info@devstudio.com" class="address-link link">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111" class="address-link link">+11 (000) 111-11-11</a></li>
+          </ul>
+        </address>
+      </div>
+      
     </header>
 
     <main>
