--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header class="page-header">
       <div class="container-header container">
-        <nav class="navigation-list"
+        <nav class="navigation-list">
           <a href="./index.html" class="navigation-logo link">Web<span class="logo-span">Studio</span></a>
           <ul class="list">
             <li><a href="./index.html" class="navigation-link link">Studio</a></li>
