--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
     <main>
       <!--section no1 hero section -->
       <section class="hero-section">
-        <h1 class="hero-section-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-section-button">Order Service</button>
+        <div class="container">
+          <h1 class="hero-section-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="hero-section-button">Order Service</button>
+        </div>
       </section>
       <!-- section no2 our strong sides-->
       <section>
