--- a/index.html
+++ b/index.html
@@ -126,8 +126,10 @@
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="navigation-logo link">Web<span class="logo-footerspan">Studio</span></a>
-      <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>    
+      <div class="container">
+        <a href="./index.html" class="navigation-logo link">Web<span class="logo-footerspan">Studio</span></a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+      </div>      
     </footer>
 
   </body>
