--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="navigation-logo link">Web<span class="logo-footerspan">Studio</span></a>
+        <a href="./index.html" class="footer-navigation-logo link">Web<span class="logo-footerspan">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
       </div>      
     </footer>
