--- a/index.html
+++ b/index.html
@@ -65,29 +65,31 @@
       </section>
       <!--section no3 our team-->
       <section class="team-section">
-        <h2 class="team-section-title">Our Team</h2>
-          <ul class="list">
-            <li class="team-section-list">
-              <img src="./images/team01-mark-guerrero.jpg" width="264" height="260" alt="man with a black beard, wearing a blue shirt" >
-                <h3 class="team-section-people-title">Mark Guerrero</h3>
-                <p class="team-section-people-text">Product Designer</p>
-            </li>
-            <li class="team-section-list">
-              <img src="./images/team02-tom-ford.jpg" width="264" height="260" alt="man with blond hair, wearing a blue shirt" >
-                <h3 class="team-section-people-title">Tom Ford</h3>
-                <p class="team-section-people-text">Frontend Developer</p>
-            </li>
-            <li class="team-section-list">
-              <img src="./images/team03-camila-garcia.jpg" width="264" height="260" alt="woman with long brown hair, wearing a pink sweater" >
-                <h3 class="team-section-people-title">Camila Garcia</h3>
-                <p class="team-section-people-text">Marketing</p>
-            </li>
-            <li class="team-section-list">
-              <img src="./images/team04-daniel-wilson.jpg" width="264" height="260" alt="man with black hair, wearing a gray t-shirt" >
-                <h3 class="team-section-people-title">Daniel Wilson</h3>
-                <p class="team-section-people-text">UI Designer</p>
-            </li>
-          </ul>
+        <div class="container">
+          <h2 class="team-section-title">Our Team</h2>
+            <ul class="list">
+              <li class="team-section-list">
+                <img src="./images/team01-mark-guerrero.jpg" width="264" height="260" alt="man with a black beard, wearing a blue shirt" >
+                  <h3 class="team-section-people-title">Mark Guerrero</h3>
+                  <p class="team-section-people-text">Product Designer</p>
+              </li>
+              <li class="team-section-list">
+                <img src="./images/team02-tom-ford.jpg" width="264" height="260" alt="man with blond hair, wearing a blue shirt" >
+                  <h3 class="team-section-people-title">Tom Ford</h3>
+                  <p class="team-section-people-text">Frontend Developer</p>
+              </li>
+              <li class="team-section-list">
+                <img src="./images/team03-camila-garcia.jpg" width="264" height="260" alt="woman with long brown hair, wearing a pink sweater" >
+                  <h3 class="team-section-people-title">Camila Garcia</h3>
+                  <p class="team-section-people-text">Marketing</p>
+              </li>
+              <li class="team-section-list">
+                <img src="./images/team04-daniel-wilson.jpg" width="264" height="260" alt="man with black hair, wearing a gray t-shirt" >
+                  <h3 class="team-section-people-title">Daniel Wilson</h3>
+                  <p class="team-section-people-text">UI Designer</p>
+              </li>
+            </ul>
+        </div>
       </section>
       <!--section no4 our portfolio -->
       <section>
