--- a/index.html
+++ b/index.html
@@ -99,40 +99,42 @@
         </div>
       </section>
       <!--section no4 our portfolio -->
-      <section>
-        <h2>Our Portfolio</h2>
-          <ul class="list">
-            <li>
+      <section class="portfolio-section">
+        <div class="container">
+          <h2 class="portfolio-section-title">Our Portfolio</h2>
+          <ul class="portfolio-section-ul list">
+            <li class="portfolio-section-list">
               <img src="./images/portf01-banking.jpg" width="360" height="300" alt="the appearance of the screens from the banking application" >
                 <h3 class="portfolio-section-our-title">Banking App</h3>
                 <p class="portfolio-section-our-text">App</p>
             </li>
-            <li>
+            <li class="portfolio-section-list">
               <img src="./images/portf02-cashless.jpg" width="360" height="300" alt="phone reading QR code" >
                 <h3 class="portfolio-section-our-title">Cashless Payment</h3>
                 <p class="portfolio-section-our-text">Marketing</p>
             </li>
-            <li>
+            <li class="portfolio-section-list">
               <img src="./images/portf03-meditation.jpg" width="360" height="300" alt="laptop and phone with the same wallpaper" >
                 <h3 class="portfolio-section-our-title">Meditation App</h3>
                 <p class="portfolio-section-our-text">App</p>
             </li>
-            <li>
+            <li class="portfolio-section-list">
               <img src="./images/portf04-taxi-service.jpg" width="360" height="300" alt="driver using the mobile application" >
                 <h3 class="portfolio-section-our-title">Taxi Service</h3>
                 <p class="portfolio-section-our-text">Marketing</p>
-            </li>
+            </li class="portfolio-section-list">
             <li>
               <img src="./images/portf05-screen-illust.jpg" width="360" height="300" alt="five types of wallpaper for mobile phone" >
                 <h3 class="portfolio-section-our-title">Screen Illustrations</h3>
                 <p class="portfolio-section-our-text">Design</p>
             </li>
-            <li>
+            <li class="portfolio-section-list">
               <img src="./images/portf06-online-courses.jpg" width="360" height="300" alt="woman in an orange sweater using a mobile phone" >
                 <h3 class="portfolio-section-our-title">Online Courses</h3>
                 <p class="portfolio-section-our-text">Marketing</p>
             </li>
           </ul>
+        </div>
       </section>
     </main>
 
