--- a/index.html
+++ b/index.html
@@ -105,8 +105,10 @@
           <ul class="portfolio-section-ul list">
             <li class="portfolio-section-list">
               <img src="./images/portf01-banking.jpg" width="360" height="300" alt="the appearance of the screens from the banking application" >
+              <div>
                 <h3 class="portfolio-section-our-title">Banking App</h3>
                 <p class="portfolio-section-our-text">App</p>
+              </div>
             </li>
             <li class="portfolio-section-list">
               <img src="./images/portf02-cashless.jpg" width="360" height="300" alt="phone reading QR code" >
