--- a/index.html
+++ b/index.html
@@ -105,35 +105,45 @@
           <ul class="portfolio-section-ul list">
             <li class="portfolio-section-list">
               <img src="./images/portf01-banking.jpg" width="360" height="300" alt="the appearance of the screens from the banking application" >
-              <div>
+              <div class="portfolio-section-card">
                 <h3 class="portfolio-section-our-title">Banking App</h3>
                 <p class="portfolio-section-our-text">App</p>
               </div>
             </li>
             <li class="portfolio-section-list">
               <img src="./images/portf02-cashless.jpg" width="360" height="300" alt="phone reading QR code" >
+              <div class="portfolio-section-card">
                 <h3 class="portfolio-section-our-title">Cashless Payment</h3>
-                <p class="portfolio-section-our-text">Marketing</p>
+                <p class="portfolio-section-our-text">Marketing</p>                
+              </div>
             </li>
             <li class="portfolio-section-list">
               <img src="./images/portf03-meditation.jpg" width="360" height="300" alt="laptop and phone with the same wallpaper" >
+              <div class="portfolio-section-card">
                 <h3 class="portfolio-section-our-title">Meditation App</h3>
                 <p class="portfolio-section-our-text">App</p>
+              </div>
             </li>
             <li class="portfolio-section-list">
               <img src="./images/portf04-taxi-service.jpg" width="360" height="300" alt="driver using the mobile application" >
+              <div class="portfolio-section-card">
                 <h3 class="portfolio-section-our-title">Taxi Service</h3>
                 <p class="portfolio-section-our-text">Marketing</p>
+              </div>
             </li>
             <li>
               <img src="./images/portf05-screen-illust.jpg" width="360" height="300" alt="five types of wallpaper for mobile phone" >
+              <div class="portfolio-section-card">
                 <h3 class="portfolio-section-our-title">Screen Illustrations</h3>
                 <p class="portfolio-section-our-text">Design</p>
+              </div>
             </li>
             <li class="portfolio-section-list">
               <img src="./images/portf06-online-courses.jpg" width="360" height="300" alt="woman in an orange sweater using a mobile phone" >
+              <div class="portfolio-section-card">
                 <h3 class="portfolio-section-our-title">Online Courses</h3>
                 <p class="portfolio-section-our-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
