--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <p class="portfolio-section-our-text">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-section-list">
               <img src="./images/portf05-screen-illust.jpg" width="360" height="300" alt="five types of wallpaper for mobile phone" >
               <div class="portfolio-section-card">
                 <h3 class="portfolio-section-our-title">Screen Illustrations</h3>
